# cmakeSetup

./: CMakeLists.txt  compile_commands.json  imgui.ini
resources/: f.txt
src/gameLayer/: gameMain.cpp  gameMain.h
src/imguiLayer/: imguiMain.cpp  imguiMain.h
src/platform/: asserts.cpp  main.cpp
